<resources>
    <string name="app_name">Child Learning</string>
    <string name="zero">zero</string>
    <string name="one">one</string>
    <string name="two">Hello World</string>
    <string name="three">Hello World</string>
    <string name="four">Hello World</string>
    <string name="five">Hello World</string>
    <string name="six">Hello World</string>
    <string name="seven">Hello World</string>
    <string name="eight">Hello World</string>
    <string name="nine">Hello World</string>
    <string name="_5">5</string>
</resources>