<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEF4EA"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_700"
        android:fontFamily="@font/arbutus"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/result"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/result"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/one"
        android:src="@drawable/one"
        android:textSize="85sp"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

<!--    <TextView-->
<!--        android:id="@+id/result"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="15dp"-->
<!--        android:textColor="@color/black"-->
<!--        android:layout_marginStart="45dp"-->
<!--        android:textSize="85sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/two"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/one"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        app:tint="@color/one"
        android:contentDescription="@string/one"
        android:src="@drawable/one"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/two"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/two"
        android:src="@drawable/two"
        app:tint="@color/two"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toTopOf="@+id/one" />

    <ImageView
        android:id="@+id/three"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/three"
        android:src="@drawable/three"
        app:tint="@color/three"
        app:layout_constraintBottom_toBottomOf="@+id/two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toTopOf="@+id/two" />

    <ImageView
        android:id="@+id/four"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/one"
        android:layout_marginBottom="15dp"
        android:src="@drawable/foure"
        app:tint="@color/four"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/five"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/five"
        android:src="@drawable/five"
        app:tint="@color/five"
        app:layout_constraintBottom_toBottomOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four" />

    <ImageView
        android:id="@+id/six"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/six"
        android:src="@drawable/six"
        app:tint="@color/six"
        app:layout_constraintBottom_toBottomOf="@+id/five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five" />

<!--    three column-->
    <ImageView
        android:id="@+id/seven"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/seven"
        android:src="@drawable/seven"
        app:tint="@color/seven"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/eight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:tint="@color/eight"
        android:contentDescription="@string/eight"
        android:src="@drawable/eight"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toTopOf="@+id/seven" />

    <ImageView
        android:id="@+id/nine"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/nine"
        app:tint="@color/nine"
        android:src="@drawable/nine"
        app:layout_constraintBottom_toBottomOf="@+id/eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toTopOf="@+id/eight" />

    <ImageView
        android:id="@+id/zero"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/zero"
        android:src="@drawable/zero"
        app:tint="@color/zero"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/exit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/zero"
        android:src="@drawable/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/clear"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/zero"
        android:src="@drawable/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zero" />
</androidx.constraintlayout.widget.ConstraintLayout>